--- a/output/index.html
+++ b/output/index.html
@@ -1,164 +1,83 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<title></title>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="assets/css/main.css">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <title>故事ことわざ辞典</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="assets/css/main.css">
 </head>
 <body>
 <div id="main">
-<!--メイン部分-->
-<div class="navi">
-<!--パンくず-->
-ホーム　&gt;
-</div>
-<h1>故事ことわざ辞典</h1>
-<p>経験と知識の共有により生み出された、ことわざ・故事成語・慣用句・四字熟語は、日常生活や社会生活において様々な場面で効果的に用いられています。<br>
-故事ことわざ辞典は、それらの意味・用例・誤用例の解説に加え、語源・出典・類義語・反対語・英語表現が一目でわかる辞書サイトです。<br>
-現在の掲載数は 1,317句。（最終更新日：2015/7/6）</p>
-<h2 class="box">【ピックアップ】</h2>
-<div class="main_box3">
-<div>
+    <!--メイン部分-->
+    <div class="navi">
+        <!--パンくず-->
+        ホーム　&gt;
+    </div>
+    <h1>故事ことわざ辞典</h1>
+    <p>経験と知識の共有により生み出された、ことわざ・故事成語・慣用句・四字熟語は、日常生活や社会生活において様々な場面で効果的に用いられています。<br>
+        故事ことわざ辞典は、それらの意味・用例・誤用例の解説に加え、語源・出典・類義語・反対語・英語表現が一目でわかる辞書サイトです。<br>
+        現在の掲載数は 1,317句。</p>
 
-<ul>
-<li>・<a href="nu/nuretedeawa.html">濡れ手で粟</a>
-</li>
-<li>・<a href="se/seiunnokokorozashi.html">青雲の志</a>
-</li>
-</ul>
-<ul>
-<li>・<a href="ku/guukouyamawoutsusu.html">愚公、山を移す</a>
-</li>
-<li>・<a href="no/nodomotosugireba.html">喉元過ぎれば熱さを忘れる</a>
-</li>
-</ul>
-<ul>
-<li>・<a href="me/menpekikunen.html">面壁九年</a>
-</li>
-<li>・<a href="ke/kendotyourai.html">捲土重来</a>
-</li>
-</ul>
-<ul>
-<li>・<a href="ri/ryuutoudabi.html">竜頭蛇尾</a>
-</li>
-<li>・<a href="wa/wakoudoujin.html">和光同塵</a>
-</li>
-</ul>
-<ul>
-<li>・<a href="to/doukouikyoku.html">同工異曲</a>
-</li>
-<li>・<a href="te/derukuiwautareru.html">出る杭は打たれる</a>
-</li>
-</ul>
-
-</div>
-</div>
-<h2 class="box">【故事ことわざ辞典逆引き分類】</h2>
-<div class="main_box3">
-<div>
-
-<ul>
-<li>・<a href="category/01/index.html">人間関係</a>
-</li>
-<li>・<a href="category/02/index.html">人生・社会</a>
-</li>
-<li>・<a href="category/03/index.html">生活・暮らし</a>
-</li>
-<li>・<a href="category/04/index.html">学問・才能・能力</a>
-</li>
-</ul>
-<ul>
-<li>・<a href="category/05/index.html">評価・評判</a>
-</li>
-<li>・<a href="category/06/index.html">性格・気質</a>
-</li>
-<li>・<a href="category/07/index.html">行動・動作</a>
-</li>
-<li>・<a href="category/08/index.html">感情・心理</a>
-</li>
-</ul>
-<ul>
-<li>・<a href="category/09/index.html">状態・程度</a>
-</li>
-<li>・<a href="category/10/index.html">言葉</a>
-</li>
-</ul>
-
-</div>
-<div class="right"><a href="category/index.html">故事ことわざ辞典逆引き分類一覧</a></div>
-</div>
-<h2 class="box">【故事ことわざ辞典更新情報】</h2>
-<div class="main_box3">
-<div>
-
-<ul>
-<li>・<a href="si/jyuubakonosumitsutsuku.html">重箱の隅をつつく</a>
-</li>
-<li>・<a href="ka/kanenowarajidetazuneru.html">金の草鞋で尋ねる</a>
-</li>
-</ul>
-<ul>
-<li>・<a href="sa/sarunieboshi.html">猿に烏帽子</a>
-</li>
-<li>・<a href="o/oootokosoumi.html">大男総身に知恵が回り兼ね</a>
-</li>
-</ul>
-<ul>
-<li>・<a href="ti/tyouyohanayo.html">蝶よ花よ</a>
-</li>
-<li>・<a href="me/metohananosaki.html">目と鼻の先</a>
-</li>
-</ul>
-<ul>
-<li>・<a href="u/usohappyaku.html">嘘八百</a>
-</li>
-<li>・<a href="se/senzaiichiguu.html">千載一遇</a>
-</li>
-</ul>
-<ul>
-<li>・<a href="ki/kyounoyume.html">京の夢大阪の夢</a>
-</li>
-<li>・<a href="ki/kigaokenai.html">気が置けない</a>
-</li>
-</ul>
-
-</div>
-<div class="right"><a href="http://kotowaza.official-blog.jp/category/%E6%9B%B4%E6%96%B0%E6%83%85%E5%A0%B1/">故事ことわざ辞典すべての更新履歴</a></div>
-</div>
-<h2 class="box">【故事ことわざ辞典キーワード索引】</h2>
-<div class="main_box3">
-<div>
-
-<ul>
-<li>・<a href="keyword/animal/index.html">動物</a>
-</li>
-<li>・<a href="keyword/plant/index.html">植物</a>
-</li>
-<li>・<a href="keyword/body/index.html">人体・部位</a>
-</li>
-<li>・<a href="keyword/nature/index.html">自然</a>
-</li>
-</ul>
-<ul>
-<li>・<a href="keyword/weather/index.html">天候・気象</a>
-</li>
-<li>・<a href="keyword/time/index.html">時・季節・行事</a>
-</li>
-<li>・<a href="keyword/quantity/index.html">数字</a>
-</li>
-<li>・<a href="keyword/color/index.html">色彩</a>
-</li>
-</ul>
-
-</div>
-<div class="right"><a href="keyword/index.html">故事ことわざ辞典すべてのキーワード</a></div>
-</div>
-
-
-
-<!--検索-->
-</div>
+    <h3 class="box_top">50音インデックス</h3>
+    <div class="side_box">
+        <table>
+            <tbody align="center">
+            <tr>
+                <td><a href="a/index.html">あ</a>
+                </td><td><a href="i/index.html">い</a>
+            </td><td><a href="u/index.html">う</a>
+            </td><td><a href="e/index.html">え</a>
+            </td><td><a href="o/index.html">お</a>
+            </td></tr><tr>
+                <td><a href="ka/index.html">か</a>
+                </td><td><a href="ki/index.html">き</a>
+            </td><td><a href="ku/index.html">く</a>
+            </td><td><a href="ke/index.html">け</a>
+            </td><td><a href="ko/index.html">こ</a>
+            </td></tr><tr>
+                <td><a href="sa/index.html">さ</a>
+                </td><td><a href="si/index.html">し</a>
+            </td><td><a href="su/index.html">す</a>
+                ...skipping...
+            </td><td><a href="ti/index.html">ち</a>
+            </td><td><a href="tu/index.html">つ</a>
+            </td><td><a href="te/index.html">て</a>
+            </td><td><a href="to/index.html">と</a>
+            </td></tr><tr>
+                <td><a href="na/index.html">な</a>
+                </td><td><a href="ni/index.html">に</a>
+            </td><td><a href="nu/index.html">ぬ</a>
+            </td><td><a href="ne/index.html">ね</a>
+            </td><td><a href="no/index.html">の</a>
+            </td></tr><tr>
+                <td><a href="ha/index.html">は</a>
+                </td><td><a href="hi/index.html">ひ</a>
+            </td><td><a href="hu/index.html">ふ</a>
+            </td><td><a href="he/index.html">へ</a>
+            </td><td><a href="ho/index.html">ほ</a>
+            </td></tr><tr>
+                <td><a href="ma/index.html">ま</a>
+                </td><td><a href="mi/index.html">み</a>
+            </td><td><a href="mu/index.html">む</a>
+            </td><td><a href="me/index.html">め</a>
+            </td><td><a href="mo/index.html">も</a>
+            </td></tr><tr>
+                <td><a href="ya/index.html">や</a>
+                </td><td>
+            </td><td><a href="yu/index.html">ゆ</a>
+            </td><td>
+            </td><td><a href="yo/index.html">よ</a>
+            </td></tr><tr>
+                <td><a href="ra/index.html">ら</a>
+                </td><td><a href="ri/index.html">り</a>
+            </td><td><a href="ru/index.html">る</a>
+            </td><td><a href="re/index.html">れ</a>
+            </td><td><a href="ro/index.html">ろ</a>
+            </td></tr><tr>
+                <td><a href="wa/index.html">わ</a>
+                </td></tr></tbody>
+        </table>
+    </div>
 </body>
 </html>
